--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,5 +1,11 @@
 <div class="d-flex justify-content-center container mt-5">
-    <div class="card p-3 bg-white"><i class="fa fa-apple"></i>
+    <div class="card p-3 bg-white">
+        <div class="d-flex justify-content-between">
+        <i class="fa fa-apple">
+        </i>
+        <i class="fa fa-heart-o" [ngClass]="{'text-danger':isClicked}" (click)="addToFav($event)" role="button">
+        </i>
+         </div>
         <div class="about-product text-center mt-2"><img src="https://i.imgur.com/3VTaSeb.png" width="300">
             <div>
                 <h4>Believing is seeing</h4>
@@ -11,6 +17,7 @@
             <div class="d-flex justify-content-between p-price"><span>Pro stand</span><span>$999</span></div>
             <div class="d-flex justify-content-between p-price"><span>Vesa Mount Adapter</span><span>$199</span></div>
         </div>
-        <div class="d-flex justify-content-between total font-weight-bold mt-4"><span>Total</span><span>$7,197.00</span></div>
+        <div class="d-flex justify-content-between total font-weight-bold mt-4"><span>Total</span><span>$7,197.00</span>
+        </div>
     </div>
 </div>
