--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,23 +1,25 @@
-<div class="d-flex justify-content-center container mt-5">
-    <div class="card p-3 bg-white">
-        <div class="d-flex justify-content-between">
-        <i class="fa fa-apple">
-        </i>
-        <i class="fa fa-heart-o" [ngClass]="{'text-danger':isClicked}" (click)="addToFav($event)" role="button">
-        </i>
-         </div>
-        <div class="about-product text-center mt-2"><img src="https://i.imgur.com/3VTaSeb.png" width="300">
-            <div>
-                <h4>Believing is seeing</h4>
-                <h6 class="mt-0 text-black-50">Apple pro display XDR</h6>
+<div class="d-flex justify-content-center overflow-hidden" style="overflow-y: auto;">
+        <div class="d-flex justify-content-center container mt-5">
+        <div class="card p-3 bg-white">
+            <div class="d-flex justify-content-between">
+                <i class="fa-brands fa-apple"></i>
+                <i class="fa-solid fa-heart" [ngClass]="{'text-danger':isClicked ,'text-body-tertiary':!isClicked}" (click)="addToFav($event)" role="button">
+                </i>
+            </div>
+            <div class="about-product text-center mt-2"><img src="https://i.imgur.com/3VTaSeb.png" width="300">
+                <div>
+                    <h4>Believing is seeing</h4>
+                    <h6 class="mt-0 text-black-50">Apple pro display XDR</h6>
+                </div>
+            </div>
+            <div class="stats mt-2">
+                <div class="d-flex justify-content-between p-price"><span>Pro Display XDR</span><span>$5,999</span></div>
+                <div class="d-flex justify-content-between p-price"><span>Pro stand</span><span>$999</span></div>
+                <div class="d-flex justify-content-between p-price"><span>Vesa Mount Adapter</span><span>$199</span></div>
+            </div>
+            <div class="d-flex justify-content-between total font-weight-bold mt-4"><span>Total</span><span>$7,197.00</span>
             </div>
         </div>
-        <div class="stats mt-2">
-            <div class="d-flex justify-content-between p-price"><span>Pro Display XDR</span><span>$5,999</span></div>
-            <div class="d-flex justify-content-between p-price"><span>Pro stand</span><span>$999</span></div>
-            <div class="d-flex justify-content-between p-price"><span>Vesa Mount Adapter</span><span>$199</span></div>
-        </div>
-        <div class="d-flex justify-content-between total font-weight-bold mt-4"><span>Total</span><span>$7,197.00</span>
-        </div>
     </div>
+    
 </div>
