--- a/src/app/products/product/product.component.html
+++ b/src/app/products/product/product.component.html
@@ -1,5 +1,5 @@
-<div *ngIf="true; else ifThereIsNoProductsSelected" class="d-flex container" style="overflow-y: scroll;">
-    <div class="m-5 d-flex">
+<div  class="d-flex container" style="overflow-y: scroll;">
+    <div class="mt-5 me-3 d-flex">
         <div class="card p-3 bg-white">
             <div class="d-flex justify-content-between">
                 <i class="fa-brands fa-apple"></i>
@@ -16,78 +16,5 @@
                 <span>Price</span><span>$7,197.00</span>
             </div>
         </div>
-
-        <!-- edit -->
-        <div *ngIf="editButton" class="card p-3 ms-3 bg-white">
-            <form>
-                <fieldset>
-                    <div class="form-group row mt-3">
-                        <label class="col-md-3 col-form-label" for="productNameId">Name</label>
-
-                        <div class="col-md-9">
-                            <input class="form-control" id="productNameId" type="text" placeholder="Product" />
-
-                        </div>
-                    </div>
-                    <div class="form-group row mt-3">
-                        <label class="col-md-3 col-form-label" for="subtitle">Subtitle</label>
-
-                        <div class="col-md-9">
-                            <input class="form-control" id="subtitle" type="text" placeholder="subtitle" />
-
-                        </div>
-                    </div>
-
-                    <div class="form-group row mt-3">
-                        <label class="col-md-3 col-form-label" for="productCategory">category</label>
-
-                        <div class="col-md-9">
-                            <input class="form-control" id="productCategory" type="text" placeholder="Category" />
-
-                        </div>
-                    </div>
-
-                    <div class="form-group row mt-3">
-                        <label class="col-md-3 col-form-label" for="productPrice">Price</label>
-
-                        <div class="col-md-9">
-                            <input class="form-control" id="productPrice" type="text" placeholder="Price (required)" />
-
-                        </div>
-                    </div>
-
-                    <div class="d-flex mt-5 col-md-10 col-md-offset-2">
-                        <span>
-                            <button class="btn btn-primary" type="submit" style="width:80px;margin-right:10px">
-                                Save
-                            </button>
-                        </span>
-                        <span>
-                            <button class="btn btn-light" type="button" style="width:80px;margin-right:10px">
-                                Cancel
-                            </button>
-                        </span>
-                        <span>
-                            <button class="btn btn-light" type="button" style="width:80px">
-                                Delete
-                            </button>
-                        </span>
-                    </div>
-                </fieldset>
-            </form>
-        </div>
     </div>
 </div>
-
-<ng-template #ifThereIsNoProductsSelected>
-    <div class="d-flex container" style="overflow-y: scroll;">
-        <div class="m-5">
-            <div class="card p-3 bg-white">
-                <div class="stats mt-2">
-                    <div class="d-flex justify-content-between p-price"><span>No products selected</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</ng-template>
