--- a/src/app/products/product/product.component.html
+++ b/src/app/products/product/product.component.html
@@ -1,4 +1,4 @@
-<div  class="d-flex container" style="overflow-y: scroll;">
+<div *ngIf="selectedProduct" class="d-flex container" style="overflow-y: scroll;">
     <div class="mt-5 me-3 d-flex">
         <div class="card p-3 bg-white">
             <div class="d-flex justify-content-between">
@@ -6,14 +6,14 @@
                 <i class="fas fa-edit" (click)="editProd($event)" role="button">
                 </i>
             </div>
-            <div class="about-product text-center mt-2"><img src="https://i.imgur.com/3VTaSeb.png" width="300">
+            <div class="about-product text-center mt-2"><img src="{{selectedProduct.imageSrc}}" width="300">
                 <div>
-                    <h4>Believing is seeing</h4>
-                    <h6 class="mt-0 text-black-50">Apple pro display XDR</h6>
+                    <h4>{{selectedProduct.title}}</h4>
+                    <h6 class="mt-0 text-black-50">{{selectedProduct.subtitle}}</h6>
                 </div>
             </div>
             <div class="d-flex justify-content-between total font-weight-bold mt-4">
-                <span>Price</span><span>$7,197.00</span>
+                <span>Price</span><span>{{selectedProduct.price}}</span>
             </div>
         </div>
     </div>
