--- a/src/app/products/productlist/productlist.component.html
+++ b/src/app/products/productlist/productlist.component.html
@@ -1,13 +1,16 @@
 <div class="card">
-
     <div class="card-header">
         All products
     </div>
 
     <div class="card-body">
         <div class="list-group">
-            <button class="list-group-item list-group-item-action rounded-0">
-                product -1
+            <button class="list-group-item  list-group-item-action rounded-0" *ngFor="let product of products"
+                [ngClass]="{'active': product?.id === selectedProduct?.id}" (click)="productSelected(product)">
+                {{product.title}} 
+                <ng-container *ngIf="showProductPrice">
+                       - <span class="text-danger fw-bold">${{product.price}}</span>
+                </ng-container>
             </button>
         </div>
     </div>
@@ -16,7 +19,8 @@
         <div class="row">
             <div class="form-check col-md-7 m-1">
                 <label>
-                    <input class="form-check-input" type="checkbox">
+                    <input class="form-check-input" type="checkbox"
+                    (change)="checkChanged()">
                     Display Product Price
                 </label>
             </div>
