--- a/src/app/products/product/product.component.html
+++ b/src/app/products/product/product.component.html
@@ -6,14 +6,15 @@
                 <i class="fas fa-edit" (click)="editProd($event)" role="button">
                 </i>
             </div>
-            <div class="about-product text-center mt-2"><img src="{{selectedProduct.imageSrc}}" width="300">
+            <div class="about-product text-center mt-2"><img src="{{selectedProduct.imageSrc}}" height="212" width="300">
                 <div>
                     <h4>{{selectedProduct.title}}</h4>
                     <h6 class="mt-0 text-black-50">{{selectedProduct.subtitle}}</h6>
+                    <h6 class="mt-0 text-info">{{selectedProduct.category}}</h6>
                 </div>
             </div>
             <div class="d-flex justify-content-between total font-weight-bold mt-4">
-                <span>Price</span><span>{{selectedProduct.price}}</span>
+                <span>Price</span><span>${{selectedProduct.price}}</span>
             </div>
         </div>
     </div>
