--- a/src/app/products/productshell/productshell.component.html
+++ b/src/app/products/productshell/productshell.component.html
@@ -1,9 +1,9 @@
 <div class='row'>
     <div class='col-md-4 p-5'>
-        <app-productlist></app-productlist>
+        <app-productlist (prod)="editButtonToFalse()" ></app-productlist>
     </div>
     <div class='col-md-8 d-flex'>
-        <app-product (editProduct)="onEditProduct()"></app-product>
+        <app-product  (editProduct)="onEditProduct()"></app-product>
         <app-productedit *ngIf="editButton"></app-productedit>
     </div>
   </div>
