--- a/src/app/products/productlist/productlist.component.html
+++ b/src/app/products/productlist/productlist.component.html
@@ -20,7 +20,8 @@
             <div class="form-check col-md-7 m-1">
                 <label>
                     <input class="form-check-input" type="checkbox"
-                    (change)="checkChanged()">
+                    (change)="checkChanged()"
+                    [checked]="showProductPrice">
                     Display Product Price
                 </label>
             </div>
