--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -11,7 +11,7 @@
                     </div>
                     <div class="mb-3"> <button v-on:click.stop.prevent="submit" class="btn btn-dark w-100">Login</button> </div>
                     <div>
-                        <input type="checkbox">
+                        <input type="checkbox" (change)="checkChanged()">
                         <label for="checkbox" class="ms-2">Fill</label>
                     </div>
                 </div>
