edit product issue resolved

--- a/src/app/products/productlist/productlist.component.html
+++ b/src/app/products/productlist/productlist.component.html
@@ -26,7 +26,8 @@
                 </label>
             </div>
             <div class="col-md-4 text-right">
-                <button class="btn btn-primary">
+                <button class="btn btn-primary"
+                 (click)="addNewProd()">
                     Add
                 </button>
             </div>
