edit component status added to ProductState

--- a/src/app/products/product-edit/product-edit.component.html
+++ b/src/app/products/product-edit/product-edit.component.html
@@ -50,6 +50,12 @@
                                 Delete
                             </button>
                         </span>
+
+                        <span>
+                            <button class="btn btn-light" type="button" style="width:80px" (click)="clearProduct()">
+                                Clear
+                            </button>
+                        </span>
                     </div>
                 </fieldset>
             </form>
