--- a/src/app/products/productshell/productshell.component.html
+++ b/src/app/products/productshell/productshell.component.html
@@ -1,6 +1,6 @@
 <div class='row'>
     <div class='col-md-4 p-5'>
-        <app-productlist (prod)="editButtonToFalse()" ></app-productlist>
+        <app-productlist ></app-productlist>
     </div>
     <div class='col-md-8 d-flex'>
         <app-product  (editProduct)="onEditProduct()"></app-product>
