--- a/src/app/products/product/product.component.html
+++ b/src/app/products/product/product.component.html
@@ -1,9 +1,9 @@
-<div *ngIf="selectedProduct; else noProductSelected" class="d-flex container" style="overflow-y: scroll;">
+<div *ngIf="(selectedProduct$ | async) as selectedProduct; else noProductSelected" class="d-flex container" style="overflow-y: scroll;">
     <div class="mt-5 me-3 d-flex">
         <div class="card p-3 bg-white">
             <div class="d-flex justify-content-between">
                 <i class="fa-brands fa-apple"></i>
-                <i class="fas fa-edit" (click)="editProd($event)" role="button">
+                <i class="fas fa-edit" (click)="editProd()" role="button">
                 </i>
             </div>
             <div class="about-product text-center mt-2"><img src="{{selectedProduct.imageSrc}}" height="212" width="300">
