--- a/src/app/user/login/login.component.html
+++ b/src/app/user/login/login.component.html
@@ -3,13 +3,16 @@
         <div class="col-md-6">
             <div class="card px-5 py-5" id="form1">
                 <div class="form-data" v-if="!submitted">
-                    <div class="forms-inputs mb-4"> <span>Email or username</span> <input autocomplete="off" type="text" >
+                    <div class="forms-inputs mb-4"> <span>Email or username</span>
+                        <input autocomplete="off" type="text">
                         <div class="invalid-feedback">A valid email is required!</div>
                     </div>
-                    <div class="forms-inputs mb-4"> <span>Password</span> <input autocomplete="off" type="password" >
+                    <div class="forms-inputs mb-4"> <span>Password</span>
+                        <input autocomplete="off" type="password">
                         <div class="invalid-feedback">Password must be 8 character!</div>
                     </div>
-                    <div class="mb-3"> <button v-on:click.stop.prevent="submit" class="btn btn-dark w-100">Login</button> </div>
+                    <div class="mb-3"> <button v-on:click.stop.prevent="submit"
+                            class="btn btn-dark w-100">Login</button> </div>
                     <div>
                         <input type="checkbox" (change)="checkChanged()">
                         <label for="checkbox" class="ms-2">Fill</label>
